# leptos-shadcn

./: .gitignore  Cargo.toml  LICENSE  README_old.md  Trunk.toml  index.html
scripts/: combine.py  examples.txt  instructions.txt  prompt.md
src/: app.rs  main.rs
src/components/: accordion.rs  alert.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  badge.rs  banner.rs  bread_crumb.rs  button.rs  calendar.rs  checkbox.rs  compose_refs.rs  dropdown_menu.rs  home.rs  label.rs  mod.rs  pagination.rs  popover.rs  primitive.rs  progress.rs  select.rs  slider.rs  switch.rs  table.rs  use_controllable_state.rs  use_previous.rs  use_size.rs  use_state_machine.rs
src/components/ui/: alert_dialog.rs  card.rs  dialog.rs  form.rs  mod.rs  progress.rs  sidebar.rs  theme.rs  toast.rs
src/components/v1/: accordion.rs  alert_dialog.rs  card.rs  mod.rs
src/demo/: accordion.rs  alert.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  badge.rs  bread_crumb.rs  button.rs  calendar.rs  card.rs  dialog.rs  dropdown_menu.rs  mod.rs  progress.rs
