[package]
name = "leptos-shadcn"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
web-sys = "0.3"
leptos = { version = "0.8.2", features = ["csr"] }
leptos_meta = "0.8.2"
leptos_router = "0.8.2"
gloo-net = { version = "0.6.0", features = ["http"] }
tailwind_fuse = { version = "0.3.0", features = ["variant"] }
leptos-style = "0.2.0"
leptos-node-ref = "0.2.0"
leptos-struct-component = "0.2.0"
leptos_icons = "0.6.1"
icondata = "0.6.0"

# [dev-dependencies]
# wasm-bindgen = "0.2"
# wasm-bindgen-test = "0.3.0"
